# pycelladmix

./: .gitignore  CITATION.cff  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
docs/: api.md  conf.py  index.md  installation.md
docs/tutorials/: 01_quickstart.ipynb  03_real_data_merfish.ipynb
notebooks/: 01_quickstart.ipynb  02_factor_annotation.ipynb  03_real_data_merfish.ipynb  04_scale_workflow.ipynb  README.md  build_tutorial.py  build_tutorial_02.py  build_tutorial_03.py  build_tutorial_04.py
src/pycelladmix/: __init__.py  annotation.py  core.py  correction.py  crf.py  nmf.py  plotting.py  preprocessing.py  scoring.py  utils.py
tests/: conftest.py  test_annotation.py  test_core.py  test_crf.py  test_nmf.py  test_scale_workflow.py  test_scoring.py  test_smoke.py  test_utils.py
