[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycelladmix"
version = "0.0.1"
description = "Python port of cellAdmix — identify and correct cell admixtures in imaging-based spatial transcriptomics."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Alexander Aivazidis", email = "alexander.aivazidis@dkfz-heidelberg.de" },
]
requires-python = ">=3.10"
keywords = [
    "spatial-transcriptomics",
    "single-cell",
    "segmentation",
    "admixture",
    "decontamination",
    "scverse",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "anndata>=0.10",
    "networkx>=3.0",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
    # JAX: GPU wheel on Linux x86_64, plain JAX elsewhere.
    "jax>=0.4.35; platform_system!='Linux' or platform_machine!='x86_64'",
    "jax[cuda12]>=0.4.35; platform_system=='Linux' and platform_machine=='x86_64'",
    "jaxtyping>=0.2.36",
    "numpyro>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.0",
    "myst-nb>=1.0",
    "sphinx-book-theme>=1.1",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "scanpy>=1.10",
]

[project.urls]
Homepage = "https://github.com/AlexanderAivazidis/pycelladmix"
Repository = "https://github.com/AlexanderAivazidis/pycelladmix"
Issues = "https://github.com/AlexanderAivazidis/pycelladmix/issues"
Documentation = "https://AlexanderAivazidis.github.io/pycelladmix/"

[tool.hatch.build.targets.wheel]
packages = ["src/pycelladmix"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line length (handled by formatter)
    "N803",  # uppercase argument names — used for matrix/tensor variables (X, W, H, ...)
    "N806",  # uppercase locals — same reason
    "F722",  # forward-annotation syntax error — false positive for jaxtyping shape strings
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/pycelladmix"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
